              and Netpbm header files.

              Build: Move LDFLAGS later so that a -L in LDFLAGS doesn't
              interfere with finding the built libnetpbm.  (The common
              link rule is already this way in 10.44.00; all the other
              link rules are now the same).

              Build: Rename Makefile.common, Makefile.config, to common.mk,
              etc.

08.09.27 BJH  Release 10.44.00

              Add pngtopam as a replacement for pngtopnm.  Has ability
              to generate image with alpha channel.  Thanks 
              David Jones <drj@ravenbrook.com>.

              pnmcolormap (pnmquant): round instead of truncating when
              computing means.

              pamcut, pnmcat, pnmpaste, pnmpad, g3topbm: Add fast PBM
              path.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pnmpaste: fail if user specified stdin for both images.

              libppmd/ppmdraw: fix crash when line is completely out of
              frame.

              pamgradient: fix bug: always produces color, not grayscale.

              pnm_backgroundxel(), pnm_backgroundxelrow() (affects
              pnmrotate, pnmshear, pnmcrop, pnmcat: correctly average
              corner colors to determine background (fill) color.

              pamcut: don't crash when cutting a region entirely to
              the left or right of the input image, with -pad.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamcut: don't crash when left > right or top > bottom with
              -pad.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pgmhist: arbitrary output when total pixels doesn't fit in an
              integer.

              pamcomp: fix bug: arbitrary output when combined number of rows
              doesn't fit in an integer.

              pamtosvg: remove "needed exchange" debug trace.

              Add pbmminkowski (source code has been in package since 10.12