@@ -10,6 +10,7 @@
 ** implied warranty.
 */
 
+#define _BSD_SOURCE  /* Make sure strdup() is in <string.h> */
 #include <string.h>
 
 #include "mallocvar.h"
