@@ -26,6 +26,7 @@
 
 ============================================================================*/
 
+#define _BSD_SOURCE  /* Make sure strdup() is in <string.h> */
 #include <assert.h>
 #include <string.h>
 #include <stdio.h>
