@@ -33,6 +33,8 @@ not yet  BJH  Release 10.45.00
               Build: Rename Makefile.common, Makefile.config, to common.mk,
               etc.
 
+              Build: Add source type declarations to make -ansi compile work.
+
 08.09.27 BJH  Release 10.44.00
 
               Add pngtopam as a replacement for pngtopnm.  Has ability
